# Aurion

./: .gitignore  Cargo.toml  GITHUB_ACTIONS_SETUP.md  README.md  REUSE.toml  app.py  convert_icon_to_icns.py  hook-gstreamer.py  main.py  meson.build  requirements.txt  vcpkg.json
.github/workflows/: build-release.yml  release.yml
build-aux/: checks.sh
po/: LINGUAS  bg.po  cs.po  da.po  de.po  el.po  eu.po  ia.po  lt.po  my.po  nl.po  pl.po  tr.po  uz.po
src/: amberol.gresource.xml  application.rs  cover_picture.rs  drag_overlay.rs  marquee.rs  meson.build  playback_control.rs  player_main.py  playlist_view.rs  queue_row.rs  song_cover.rs  song_details.rs  volume_control.rs  waveform_view.rs  window.rs
src/Icons/: logo.icns
src/apps/: app.py
src/audio/: audio_metadata.py  audio_processing.py  gst_backend.rs  mod.rs  mpris_controller.rs  player.rs  waveform_generator.rs
src/config/: ffmpeg_locator_dialog.py  ffmpeg_manager.py  gui_config.py
src/core/: cache.py  events.py  playlist.py  settings.py
src/gtk/: meson.build  playback-control.blp  playlist-view.blp  queue-row.blp  shortcuts-dialog.blp  song-cover.blp  song-details.blp  style.css  volume-control.blp  window.blp
src/legacy/: main_entry.py  playback.py
src/ui/: ui_dialogs.py  ui_widgets.py
